--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ sem 4, BS DFCS  -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="form.js"></script>
-    <link rel="stylesheet" href="form1.css">
+    <link rel="stylesheet" href="style.css">
     
 <style>
     body {
