--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ sem 4, BS DFCS  -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="form.js"></script>
+    <script src="main.js"></script>
     <link rel="stylesheet" href="style.css">
     
 <style>
